# AIEC1

./: .gitignore  LEARNING_GUIDE.md
01_Dense_Vector_Retrieval/: 01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  pyproject.toml
02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb  pyproject.toml
03_Agent_Memory_LangGraph_LangChain/: 01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb
04_Multi_Agent_Systems/: .env.example  01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb  pyproject.toml
05_Synthetic_Data_Generation_for_RAG_Evals/: 01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb
06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb
07_Advanced_Retrievers/: 01_Cat_Health_Advanced_Retrieval.ipynb
08_MCP/: README.md
08_MCP/app/: tools.py
09_Agent_Servers/: .dockerignore  .gitignore  Dockerfile.vercel  README.md  pyproject.toml  vercel.json
09_Agent_Servers/app/: rag.py
09_Agent_Servers/docker/: entrypoint-all-in-one.sh  entrypoint-inmem.sh
09_Agent_Servers/frontend/: package-lock.json  package.json
09_Agent_Servers/frontend/app/: globals.css  page.tsx
09_Agent_Servers/frontend/components/: chat.tsx
09_Agent_Servers/frontend/lib/: messages.ts
10_LLM_Servers/: .env.example  README.md  activity1_ragas_evaluation.ipynb  endpoint_slammer.ipynb  fireworks_rag.ipynb  pyproject.toml
10_LLM_Servers/app/: rag.py
14_multimodal_rag/: multimodal_rag.ipynb  pyproject.toml
LEARNING_GUIDE/: README.md
tasks/: todo.md
(+9 files in other folders)
