[project]
name = "aim-agentic-rag-langgraph-langchain"
version = "0.1.0"
description = "Session 2 agentic RAG notebooks for AI Makerspace."
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "qdrant-client>=1.15.0",
]

[tool.uv]
package = false
# aiohttp 3.14.1 shipped only cp312 wheels (no cp313 wheel, no sdist), breaking
# installs on Python 3.13. Pin it out until a release with full wheel coverage.
constraint-dependencies = ["aiohttp!=3.14.1"]
